added independent event listener for '=' button, so we can execute calculate properly

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="calc__wrapper">
+        <div class="calc__output_top">
+
+        </div>
         <div class="calc__output">
         </div>
         <div class="calc__buttons-wrapper">
@@ -27,7 +30,7 @@
             <div data-operation="/" class="calc__button calc__button-operation">/</div>
             <div class="calc__button calc__button-digit">0</div>
             <div class="calc__button calc__button-clear">C</div>
-            <div data-operation="=" class="calc__button calc__button-operation">=</div>
+            <div data-operation="=" class="calc__button calc__button-calculate">=</div>
             <div class="calc__button calc__button-dot">.</div>
 
         </div>
