--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
 
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.3.0/math.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
