--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
             <button class="calc__button calc__button-clear">C</button>
             <button data-disable = 'true' class="calc__button calc__button-changepol">+/-</button>
             <button data-disable = 'true' class="calc__button calc__button-square">x^2</button>
-            <button data-disable = 'true' data-operation="/" class="calc__button calc__button-operation">/</button>
+            <button data-disable = 'true' data-operation="/" class="calc__button calc__button-operation">&divide;</button>
             <button class="calc__button calc__button-digit">7</button>
             <button class="calc__button calc__button-digit">8</button>
             <button class="calc__button calc__button-digit">9</button>
-            <button data-disable = 'true' data-operation="*" class="calc__button calc__button-operation">*</button>
+            <button data-disable = 'true' data-operation="*" class="calc__button calc__button-operation">&times;</button>
             <button class="calc__button calc__button-digit">4</button>
             <button class="calc__button calc__button-digit">5</button>
             <button class="calc__button calc__button-digit">6</button>
-            <button data-disable = 'true' data-operation="-" class="calc__button calc__button-operation">-</button>
+            <button data-disable = 'true' data-operation="-" class="calc__button calc__button-operation">&minus;</button>
             <button class="calc__button calc__button-digit">1</button>
             <button class="calc__button calc__button-digit">2</button>
             <button class="calc__button calc__button-digit">3</button>
